--- a/app/views/dev2/l2/users/view/all.html
+++ b/app/views/dev2/l2/users/view/all.html
@@ -11,14 +11,18 @@
 
 {% block content %}
     <div class="govuk-width-container">
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-one-half">
+                <h1 class="govuk-heading-l listing-page">Users</h1>
+                <a href="/dev2/l2/users/add/start" class="govuk-button listing-page">
+                    Add a user
+                </a>
+            </div>
+        </div>
 
-        {% include "./includes/user-view-heading-add-search.html" %}
-        
         {% include "./includes/user-view-filters.html" %}
 
         <table class="govuk-table">
-            
-            
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
                     <th scope="col" class="govuk-table__header govuk-!-width-one-third">
@@ -38,9 +42,6 @@
                     </th>
                 </tr>
             </thead>
-
-
-
 
             <tbody class="govuk-table__body">
                 {% if data["user-first-name"] and data["user-last-name"] %}
