--- a/app/views/dev2/l2/users/view/search-test.html
+++ b/app/views/dev2/l2/users/view/search-test.html
@@ -11,10 +11,17 @@ w{% extends "layout.html" %}
 
 {% block content %}
     <div class="govuk-width-container">
-        
 
-        {% include "./includes/user-view-heading-add-search.html" %}
-        
+
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-one-half">
+                <h1 class="govuk-heading-l listing-page">Users</h1>
+                <a href="/dev2/l2/users/add/start" class="govuk-button listing-page">
+                    Add a user
+                </a>
+            </div>
+        </div>
+
         {% include "./includes/user-view-filters.html" %}
 
         <table class="govuk-table">
