Changed user lists to 20 per page on orgs

--- a/app/views/v7/l2/users/view/croydon.html
+++ b/app/views/v7/l2/users/view/croydon.html
@@ -81,15 +81,76 @@
             </tr>
 
             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Jevons</a></th>
+                <td class="govuk-table__cell">a.jevons@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Invite sent</td>
+            </tr>
+
+            <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andy Radrizzani</a></th>
                 <td class="govuk-table__cell">a.radrizzani@croydon.gov.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Smith</a></th>
+                <td class="govuk-table__cell">b.smith@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Beth Jones</a></th>
+                <td class="govuk-table__cell">b.jones@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+
+            <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
                 <td class="govuk-table__cell">b.fotherby@croydon.gov.uk</td>
                 <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Wilson</a></th>
+                <td class="govuk-table__cell">c.wilson@croydon.gov.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Benson</a></th>
+                <td class="govuk-table__cell">c.benson@croydon.gov.uk</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Claire Philips</a></th>
+                <td class="govuk-table__cell">c.philips@croydon.gov.uk</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Colin Warnock</a></th>
+                <td class="govuk-table__cell">c.warnock@croydon.gov.uk</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Dan Mawby</a></th>
+                <td class="govuk-table__cell">d.mawby@croydon.gov.uk</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Danny Wallace</a></th>
+                <td class="govuk-table__cell">d.wallace@croydon.gov.uk</td>
+                <td class="govuk-table__cell ">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gabby Logan</a></th>
+                <td class="govuk-table__cell">g.logan@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -132,10 +193,16 @@
 
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-            Showing 1 &ndash; 10 of 15 users
+            Showing 1 &ndash; 20 of 25 users
         </div>
 
         <ul class="pagination">
+             <li class="pagination__item">
+                <a class="pagination__link disabled" aria-label="Previous page">
+                    <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+                </a>
+            </li>
+            
             <li class="pagination__item">
                 <span class="pagination__link current" aria-label="Page 1">1</span>
             </li>
