--- a/app/views/v7/l2/users/view/dwp.html
+++ b/app/views/v7/l2/users/view/dwp.html
@@ -66,10 +66,79 @@
             {% endif %}
 
             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Smith</a></th>
+                <td class="govuk-table__cell">amy.smith@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andy Brown</a></th>
+                <td class="govuk-table__cell">andy.brown@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Anna Davies</a></th>
+                <td class="govuk-table__cell">anna.davies@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Barry Holmes</a></th>
                 <td class="govuk-table__cell">barry.holmes@dwp.gov.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Cartwright</a></th>
+                <td class="govuk-table__cell">ben.cartwright@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+
+             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Beth Anderson</a></th>
+                <td class="govuk-table__cell">beth.anderson@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bev Jones</a></th>
+                <td class="govuk-table__cell">bev.jones@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Davison</a></th>
+                <td class="govuk-table__cell">carl.davison@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Walker</a></th>
+                <td class="govuk-table__cell">chris.walker@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chrissy Adams</a></th>
+                <td class="govuk-table__cell">Chrissy.adams@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Claire Smith</a></th>
+                <td class="govuk-table__cell">carl.davison@dwp.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+
+
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Edward Hearn</a></th>
@@ -92,7 +161,7 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Neil Hunt</a></th>
                 <td class="govuk-table__cell">neil.hunt@dwp.gov.uk</td>
-                <td class="govuk-table__cell">Active</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -129,7 +198,7 @@
 
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-            Showing 1 &ndash; 10 of 132 users
+            Showing 1 &ndash; 20 of 132 users
         </div>
 
         <ul class="pagination">
@@ -157,6 +226,14 @@
 
             <li class="pagination__item">
                 <a class="pagination__link" href="#" aria-label="Page 5">5</a>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link" href="#" aria-label="Page 6">6</a>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link" href="#" aria-label="Page 7">7</a>
             </li>
 
             <li class="pagination__item">
