--- a/app/views/v7/l2/users/view/croydon-2.html
+++ b/app/views/v7/l2/users/view/croydon-2.html
@@ -61,6 +61,12 @@
             </tr>
 
             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Paula Radcliffe</a></th>
+                <td class="govuk-table__cell">p.radcliffe@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Ridsdale</a></th>
                 <td class="govuk-table__cell">p.ridsdale@croydon.gov.uk</td>
                 <td class="govuk-table__cell">Access expired</td>
@@ -82,7 +88,7 @@
 
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-            Showing 10 &ndash; 15 of 15 users
+            Showing 21 &ndash; 25 of 25 users
         </div>
 
         <ul class="pagination">
@@ -98,6 +104,12 @@
 
             <li class="pagination__item">
                 <span class="pagination__link current" href="croydon-2" aria-label="Page 2">2</span>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link disabled" href="#" aria-label="Next page">
+                    Next <span aria-hidden="true" role="presentation">&raquo;</span>
+                </a>
             </li>
         </ul>
     </nav>
