--- a/app/views/dev2/l3/users/view/all.html
+++ b/app/views/dev2/l3/users/view/all.html
@@ -12,7 +12,10 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-half">
-            <h1 class="govuk-heading-l listing-page">Users</h1>
+             <h1 class="govuk-heading-l listing-page">
+                    <span class="govuk-caption-l">{{ data['prototype-organisation'] }}</span>
+                    Users
+                </h1>
             <a href="/dev2/l3/users/add/start" class="govuk-button listing-page">
                 Add a user
             </a>
