Fixed link to view user on new org list

--- a/app/views/dev2/l2/orgs/view/all.html
+++ b/app/views/dev2/l2/orgs/view/all.html
@@ -49,7 +49,7 @@
 
                             <td class="govuk-table__cell">
                                 {% if data['user-first-name'] and data['user-last-name'] %}
-                                    <a href="../../users/view/details" class="govuk-link">
+                                    <a href="../../users/view/single" class="govuk-link">
                                         View user
                                     </a>
                                 {% else %}
