Commented out search on L2 org user lists

--- a/app/views/dev2/l2/users/view/includes/org-user-view-search.html
+++ b/app/views/dev2/l2/users/view/includes/org-user-view-search.html
@@ -1,4 +1,4 @@
-            <div class="govuk-grid-column-one-half">
+<!--            <div class="govuk-grid-column-one-half">
                 <div class="user-search-box">
                     <label class="govuk-label govuk-label--s" for="user-search">
                         Search for a user
@@ -17,3 +17,4 @@
                     </form>
                 </div>
             </div>
+-->
