Added 20 users per page to L2 org lists

--- a/app/views/dev2/l2/users/view/g4s.html
+++ b/app/views/dev2/l2/users/view/g4s.html
@@ -124,10 +124,40 @@
                 <td class="govuk-table__cell">mick.brown@g4s.co.uk</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Neville Fickling</a></th>
+                <td class="govuk-table__cell">neville.fickling@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Paul Young</a></th>
+                <td class="govuk-table__cell">paul.young@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rex Hunt</a></th>
+                <td class="govuk-table__cell">rex.hunt@g4s.co.uk</td>
+                <td class="govuk-table__cell">Invite sent</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robson Green</a></th>
+                <td class="govuk-table__cell">robson.green@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Church</a></th>
+                <td class="govuk-table__cell">robert.church@g4s.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
         </tbody>
     </table>
 
-    <nav role="navigation" aria-label="Pagination">
+   <!-- <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
             Showing 1 &ndash; 10 of 15 users
         </div>
@@ -154,6 +184,8 @@
             </li>
         </ul>
     </nav>
+
+    -->
 
     <p class="govuk-!-margin-top-9">
         <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
