--- a/app/views/dev2/l2/users/view/capita.html
+++ b/app/views/dev2/l2/users/view/capita.html
@@ -68,71 +68,132 @@
                 </tr>
             {% endif %}
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Fairclough</a></th>
-                <td class="govuk-table__cell">chris.fairclough@capita.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
+                           <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Abby Hammond</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
-                <td class="govuk-table__cell">chris.whyte@capita.co.uk</td>
-                <td class="govuk-table__cell">Invite sent</td>
-            </tr>
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andrew Weatherall</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
-                <td class="govuk-table__cell">david.batty@capita.co.uk</td>
-                <td class="govuk-table__cell">Access expired</td>
-            </tr>
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Jarvis</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
-                <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Smith</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
-                <td class="govuk-table__cell">gary.speed@capita.co.uk</td>
-                <td class="govuk-table__cell">Access expired</td>
-            </tr>
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Jones</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
-                <td class="govuk-table__cell">gordon.strachan@capita.co.uk</td>
-                <td class="govuk-table__cell">Invite sent</td>
-            </tr>
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Fairclough</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
-                <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
-                <td class="govuk-table__cell ">Active</td>
-            </tr>
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Invite sent</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
-                <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
-                <td class="govuk-table__cell">Access expired</td>
-            </tr>
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Access expired</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
-                <td class="govuk-table__cell">lee.chapman@capita.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Claire Underwood</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Access expired</td>
+                </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
-                <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gabby Keane</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Access expired</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Invite sent</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jennifer Smith</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jenny Lewis</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell ">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Access expired</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lucy Ward</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
         </tbody>
     </table>
 
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-            Showing 1 &ndash; 10 of 13 users
+            Showing 1 &ndash; 20 of 23 users
         </div>
 
         <ul class="pagination">
