--- a/app/views/dev2/l2/users/view/croydon.html
+++ b/app/views/dev2/l2/users/view/croydon.html
@@ -127,12 +127,38 @@
                 <td class="govuk-table__cell">m.cussins@croydon.gov.uk</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
+
+             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Massimo Cellino</a></th>
+                <td class="govuk-table__cell">m.cellino@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Ridsdale</a></th>
+                <td class="govuk-table__cell">p.ridsdale@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Sam Bolton</a></th>
+                <td class="govuk-table__cell">s.bolton@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Trevor Birch</a></th>
+                <td class="govuk-table__cell">t.birch@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
         </tbody>
     </table>
 
+
+    <!--
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-            Showing 1 &ndash; 10 of 15 users
+            Showing 1 &ndash; 15 of 15 users
         </div>
 
         <ul class="pagination">
@@ -151,6 +177,7 @@
             </li>
         </ul>
     </nav>
+    -->
 
     <p class="govuk-!-margin-top-9">
         <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
