--- a/app/views/dev2/l2/users/view/remploy.html
+++ b/app/views/dev2/l2/users/view/remploy.html
@@ -125,12 +125,72 @@
                 <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
+
+                        <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Weatherall</a></th>
+                <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Debbie Kerr</a></th>
+                <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Frank Strandli</a></th>
+                <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Imre Varadi</a></th>
+                <td class="govuk-table__cell">imre.varadi@remploy.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Janet Sheridan</a></th>
+                <td class="govuk-table__cell">amy.whitlow@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McClelland</a></th>
+                <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mary Hennigan</a></th>
+                <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mervyn Day</a></th>
+                <td class="govuk-table__cell">peter.haddock@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Nigella Worthington</a></th>
+                <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Haddock</a></th>
+                <td class="govuk-table__cell">peter.haddock@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
         </tbody>
     </table>
 
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-        Showing 1 &ndash; 10 of 23 users
+        Showing 1 &ndash; 20 of 23 users
         </div>
 
         <ul class="pagination">
@@ -148,9 +208,7 @@
                 <a class="pagination__link" href="remploy-2" aria-label="Page 2">2</a>
             </li>
 
-            <li class="pagination__item">
-                <a class="pagination__link" href="employ-3" aria-label="Page 3">3</a>
-            </li>
+
 
             <li class="pagination__item">
                 <a class="pagination__link" href="remploy-2" aria-label="Next page">
