--- a/app/views/dev2/l3/users/view/includes/user-view-heading-add-search.html
+++ b/app/views/dev2/l3/users/view/includes/user-view-heading-add-search.html
@@ -4,7 +4,7 @@
                     <span class="govuk-caption-l">{{ data['prototype-organisation'] }}</span>
                     Users
                 </h1>
-                <form id="form" method="post" action="../add/details">
+                <form id="form" method="post" action="../../add/details">
                     <input type="hidden" name="organisation-name-existing" id="organisation-name-existing" value="Capita">
                     <button type="submit" class="govuk-button listing-page">Add a user</button>
                 </form>
