Updates to sign in pages and header logo text

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -748,3 +748,7 @@ body > .govuk-header + .govuk-width-container {
     flex: 1 1 100%;
     width: 100%;
 }
+
+.govuk-header__logotype{
+    width:150% !important;
+}
