--- a/app/views/dev2/l3/users/view/sorted/all-by-name-reverse.html
+++ b/app/views/dev2/l3/users/view/sorted/all-by-name-reverse.html
@@ -203,6 +203,6 @@
     </nav>
 
     <p class="govuk-!-margin-top-9">
-        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
+        <a href="../../../../dashboard" class="govuk-link">Back to dashboard</a>
     </p>
 {% endblock %}
