--- a/app/views/index.html
+++ b/app/views/index.html
@@ -255,6 +255,9 @@
                 <li>
                     Added route to <a href="/v7/l3/users/view/single-jn">restore access</a> to access expired status user on L3 user details page
                 </li>
+                <li>
+                    Changed heading logo text to 'DWP Authenticate admin portal' to make it clearer what a the user is signing into
+                </li>
             </ul>
 
             <h3 class="govuk-heading-s">Confidence level</h3>
@@ -280,42 +283,42 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/email">Register email</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
-                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Iteration tested well in the most recent round of research</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/password">Password creation during registration</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
-                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Iteration tested well in the most recent round of research</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/mobile">Mobile 2FA</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
-                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Tested well but want to check again when live</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/app-check">App or text message question</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
-                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Iteration tested well in the most recent round of research</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/register/qr">Authenticator app setup</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
-                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Journey not explored</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/email">Sign in email</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
-                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Design iterated following research, needs validating</td>
                     </tr>
 
@@ -329,7 +332,7 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l2/users/reset-password/start">Password reset</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
-                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Tested well with 4 users, needs testing with a few more users</td>
                     </tr>
 
@@ -406,7 +409,7 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v7/l3/dashboard">Organisation admin dashboard</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
-                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Tested well and will work for MVP, possible redundant page, might be worth testing without this page in the future</td>
                     </tr>
                 </tbody>
