--- a/app/views/dev2/l2/users/view/all-2.html
+++ b/app/views/dev2/l2/users/view/all-2.html
@@ -140,7 +140,7 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
                 <td class="govuk-table__cell">Serco</td>
-                <td class="govuk-table__cell">Invite expired</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
 
