Removed invite expired from L2 and L3

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -258,6 +258,9 @@
                 <li>
                     Changed heading logo text to 'DWP Authenticate admin portal' to make it clearer what a the user is signing into
                 </li>
+                 <li>
+                    Removed 'Invite expired' status, deemed unnecessary by team
+                </li>
             </ul>
 
             <h3 class="govuk-heading-s">Confidence level</h3>
