--- a/app/views/v7/l2/users/view/includes/user-view-filters.html
+++ b/app/views/v7/l2/users/view/includes/user-view-filters.html
@@ -18,8 +18,7 @@
             <option value="all-statuses">All statuses</option>
             <option value="access-expired">Access expired</option>
             <option value="active">Active</option>
-            <option value="invite-expired">Invite expired</option>
-            <option value="invite-sent">Invite sent</option>
+x            <option value="invite-sent">Invite sent</option>
         </select>
 
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
