--- a/app/views/v7/l2/users/view/serco.html
+++ b/app/views/v7/l2/users/view/serco.html
@@ -65,7 +65,7 @@
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
                 <td class="govuk-table__cell">drevie@serco.co.uk</td>
-                <td class="govuk-table__cell">Invite expired</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
