Update to changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -256,7 +256,10 @@
                     Added route to <a href="/v7/l3/users/view/single-jn">restore access</a> to access expired status user on L3 user details page
                 </li>
                 <li>
-                    Changed heading logo text to 'DWP Authenticate admin portal' to make it clearer what a the user is signing into
+                    Edited heading logo text to 'DWP Authenticate admin portal' to make it clearer what a the user is signing into
+                </li>
+                <li>
+                    Removed superfluos content on the sign in pages based on the above change to the logo text in the header
                 </li>
                  <li>
                     Removed 'Invite expired' status, deemed unnecessary by team
