Update to changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -259,7 +259,7 @@
                     Edited heading logo text to 'DWP Authenticate admin portal' to make it clearer what a the user is signing into
                 </li>
                 <li>
-                    Removed superfluos content on the sign in pages based on the above change to the logo text in the header
+                    Removed superfluous content on the sign in pages based on the above change to the logo text in the header
                 </li>
                  <li>
                     Removed 'Invite expired' status, deemed unnecessary by team
