Removed signed out page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -262,7 +262,10 @@
                     Removed superfluous content on the sign in pages based on the above change to the logo text in the header
                 </li>
                  <li>
-                    Removed 'Invite expired' status, deemed unnecessary by team
+                    Removed 'Invite expired' status after team review
+                </li>
+                <li>
+                    Removed 'Signed out' page after team review
                 </li>
             </ul>
 
