--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -53,7 +53,7 @@
       </div>
 
       <nav class="govuk-header__nav">
-        <a href="/mvp1/signed-out" class="govuk-header__nav-link">Sign out</a>
+        <a href="/v7/l2/signin" class="govuk-header__nav-link">Sign out</a>
       </nav>
     </div>
   </header>
